--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
   dartz: ^0.10.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
