--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   internet_connection_checker: ^1.0.0+1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
