--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.2.3
   http: ^1.2.1
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,8 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   mockito: ^5.4.4
   build_runner: ^2.4.9
+  test: ^1.24.9
+  bloc_test: ^9.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
