--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.2.1
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
