--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
   cached_network_image: ^3.3.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
