--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_it: ^7.7.0
   cached_network_image: ^3.3.1
   image_picker: ^1.1.2
+  go_router: ^14.1.4
 
 dev_dependencies:
   flutter_test:
