--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.3.1
   image_picker: ^1.1.2
   go_router: ^14.1.4
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
