--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.1.2
   go_router: ^14.1.4
   http_parser: ^4.0.2
+  socket_io_client: ^2.0.3+1
+  bloc_concurrency: ^0.2.5
 
 dev_dependencies:
   flutter_test:
